<resources>
    <string name="app_name">Note+ Final</string>
    <string name="keepnotes">KeepNotes+</string>
    <string name="Time">12:00:00 PM</string>
    <string name="enter">Enter your note</string>
    <string name="add_note">Add Note</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="remember_notes">Remember Notes</string>
    <string name="Alarm_Time">08 : 45 PM</string>
    <string name="select_time">Select Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
</resources>