<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AlarmActivity"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/notificationLabel"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@color/dominant_color"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/remember_notes"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectTime"
        android:layout_marginTop="90dp"
        android:text="@string/Alarm_Time"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="46sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/selectTimeBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/dominant_color"
        android:text="@string/select_time"
        android:textSize="20sp"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/setAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dominant_color"
        android:text="@string/set_alarm"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/cancelAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/accent_colors"
        android:text="@string/cancel_alarm"
        android:textSize="20sp"
        android:textColor="@color/white"/>





</LinearLayout>